@@ -1,3 +1,8 @@
+Tue Feb 24 00:19:33 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* lib/pathname.rb (Pathname#foreachline): removed wrongly
+	  resurrected method.  [ruby-dev:38065]
+
 Mon Feb 23 20:39:21 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/ancdata.c (inspect_timespec_as_abstime): new function to
